ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ExportAssignments/parserExportAssignment4/input.ts.stderr
error: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ExportAssignments/parserExportAssignment4/input.ts:1:10
  |
1 | export = ;
  |          ^

